--- a/Dermatology.ipynb
+++ b/Dermatology.ipynb
@@ -131,7 +131,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 603,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +443,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 605,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +979,7 @@
         "meanAge = math.floor(temp['Age'].mean())\n",
         "meanAge"
       ],
-      "execution_count": 606,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1010,7 @@
         "df = df.replace('?', meanAge)\n",
         "df[df['Age'] == '?']"
       ],
-      "execution_count": 607,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1105,7 @@
         "  df[i] = df[i].astype(int)\n",
         "df.dtypes"
       ],
-      "execution_count": 608,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1181,7 +1181,7 @@
         "plt.figure(figsize=(18,6))\n",
         "sns.heatmap(df.isnull(), yticklabels=True, cbar=False, cmap='viridis', xticklabels=True)"
       ],
-      "execution_count": 609,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1710,7 +1710,7 @@
         "# Predictions\n",
         "summary_model1[0][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 622,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1772,7 @@
         "# Predictions\n",
         "summary_model1[1][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 623,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1834,7 +1834,7 @@
         "# Predictions\n",
         "summary_model1[2][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 624,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1948,7 +1948,7 @@
         "# Predictions\n",
         "summary_model2[0][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 626,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2010,7 +2010,7 @@
         "# Predictions\n",
         "summary_model2[1][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 627,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2072,7 +2072,7 @@
         "# Predictions\n",
         "summary_model2[2][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 628,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2186,7 +2186,7 @@
         "# Predictions\n",
         "summary_model3[0][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 630,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2248,7 +2248,7 @@
         "# Predictions\n",
         "summary_model3[1][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 631,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2310,7 +2310,7 @@
         "# Predictions\n",
         "summary_model3[2][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 632,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2424,7 +2424,7 @@
         "# Predictions\n",
         "summary_model4[0][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 634,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2486,7 +2486,7 @@
         "# Predictions\n",
         "summary_model4[1][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 635,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2548,7 +2548,7 @@
         "# Predictions\n",
         "summary_model4[2][2] =  predictions_model(model, test_data)"
       ],
-      "execution_count": 636,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2645,8 +2645,8 @@
         "\n",
         "  print(\"Results:\")\n",
         "  for i in range(4):\n",
-        "    loss[i] = summary_models[i][testNumber][1][0]\n",
-        "    accuracy[i] = summary_models[i][testNumber][1][1]\n",
+        "    loss[i] = summary_models[i][testNumber - 1][1][0]\n",
+        "    accuracy[i] = summary_models[i][testNumber - 1][1][1]\n",
         "    print(\"Model \", i+1, \": \",\n",
         "          \"\\tLoss: \", \"{0:.4f}\".format(loss[i]),\n",
         "          \"\\tAccuracy: \", \"{0:.4f}\".format(accuracy[i])\n",
@@ -2684,9 +2684,9 @@
         }
       },
       "source": [
-        "print_results(0)"
+        "print_results(1)"
       ],
-      "execution_count": 639,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2719,16 +2719,16 @@
       "metadata": {
         "id": "Ob3KTnYcbSeM",
         "colab_type": "code",
+        "outputId": "25594d29-9489-4625-f0aa-70d0dc47e280",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        },
-        "outputId": "25594d29-9489-4625-f0aa-70d0dc47e280"
+        }
       },
       "source": [
-        "print_results(1)"
+        "print_results(2)"
       ],
-      "execution_count": 640,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2761,16 +2761,16 @@
       "metadata": {
         "id": "krDtYYYgbV0V",
         "colab_type": "code",
+        "outputId": "f3ab53e2-64d9-4317-ae9c-ff288bbc06ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        },
-        "outputId": "f3ab53e2-64d9-4317-ae9c-ff288bbc06ce"
+        }
       },
       "source": [
-        "print_results(2)"
+        "print_results(3)"
       ],
-      "execution_count": 641,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2806,7 +2806,7 @@
         "colab": {}
       },
       "source": [
-        "#print_results(3)"
+        "#print_results(4)"
       ],
       "execution_count": 0,
       "outputs": []
