Creado mediante Colaboratory

--- a/Dermatology.ipynb
+++ b/Dermatology.ipynb
@@ -40,11 +40,7 @@
       "metadata": {
         "id": "HtHAuPSa5Rpp",
         "colab_type": "code",
-        "outputId": "dd185365-46f3-4562-ecd7-d74267f11e04",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -68,21 +64,14 @@
         "import seaborn as sns\n",
         "import math\n",
         "\n",
+        "from sklearn import preprocessing\n",
         "\n",
         "seed=1234\n",
         "np.random.seed(seed)\n",
         "tf.random.set_seed(seed)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1707,7 +1696,84 @@
       "source": [
         "### Important Features from the Correlation Heatmap\n",
         "\n",
-        "Se obtienen los features más importantes según el heatmap, aquellos que tiene una corealacion menor a 90%"
+        "Se obtienen los features más importantes según el heatmap, para hacer mas sencilla esta operación normalizaremos los datos de la matriz de correlación."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mvcjlaAwTeF_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 663
+        },
+        "outputId": "8332f1da-83f4-4d15-a6c0-d822e6e262b4"
+      },
+      "source": [
+        "x = corr.values #returns a numpy array\n",
+        "min_max_scaler = preprocessing.MinMaxScaler()\n",
+        "x_scaled = min_max_scaler.fit_transform(x)\n",
+        "normalized_corr = pd.DataFrame(x_scaled)\n",
+        "\n",
+        "print(normalized_corr)"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "          0         1         2   ...        32        33        34\n",
+            "0   1.000000  0.615667  0.470405  ...  0.289842  0.278586  0.207852\n",
+            "1   0.583408  1.000000  0.542172  ...  0.201952  0.292631  0.129158\n",
+            "2   0.454272  0.564758  1.000000  ...  0.493314  0.384472  0.172119\n",
+            "3   0.226925  0.260742  0.243429  ...  0.569792  0.312264  0.440750\n",
+            "4   0.262244  0.312208  0.455027  ...  0.564406  0.341319  0.352203\n",
+            "5   0.286566  0.268172  0.517905  ...  0.933548  0.351852  0.440893\n",
+            "6   0.180943  0.256258  0.162837  ...  0.200120  0.015428  0.690228\n",
+            "7   0.241987  0.262760  0.488409  ...  0.924039  0.362240  0.439730\n",
+            "8   0.366063  0.522086  0.502482  ...  0.099996  0.224725  0.179876\n",
+            "9   0.399617  0.524828  0.475212  ...  0.117879  0.309410  0.090064\n",
+            "10  0.388825  0.442869  0.365750  ...  0.175933  0.217032  0.321009\n",
+            "11  0.292884  0.268293  0.506149  ...  0.941329  0.368757  0.440663\n",
+            "12  0.317343  0.347971  0.187593  ...  0.314523  0.314844  0.369732\n",
+            "13  0.427251  0.511905  0.311178  ...  0.069193  0.319443  0.079849\n",
+            "14  0.000000  0.057955  0.084971  ...  0.173133  0.304849  0.719343\n",
+            "15  0.278151  0.242532  0.140534  ...  0.566282  0.248893  0.576844\n",
+            "16  0.309252  0.392619  0.420378  ...  0.355914  0.314182  0.359715\n",
+            "17  0.220788  0.328376  0.312935  ...  0.192437  0.273626  0.374106\n",
+            "18  0.417036  0.522456  0.539432  ...  0.246131  0.311214  0.155559\n",
+            "19  0.378108  0.537935  0.560201  ...  0.081179  0.372017  0.009522\n",
+            "20  0.267476  0.414311  0.426023  ...  0.000000  0.372095  0.193746\n",
+            "21  0.385722  0.544464  0.547339  ...  0.085309  0.377023  0.000000\n",
+            "22  0.387133  0.522132  0.459327  ...  0.138275  0.341928  0.139958\n",
+            "23  0.345555  0.446259  0.456348  ...  0.154560  0.347378  0.097433\n",
+            "24  0.251620  0.261367  0.491585  ...  0.932630  0.353986  0.444134\n",
+            "25  0.379249  0.463415  0.537131  ...  0.194697  0.385629  0.152935\n",
+            "26  0.263666  0.244682  0.496538  ...  0.955943  0.374291  0.439471\n",
+            "27  0.278915  0.326353  0.105220  ...  0.322133  0.216889  0.535644\n",
+            "28  0.257510  0.241313  0.479627  ...  0.949725  0.362748  0.442465\n",
+            "29  0.257805  0.311996  0.220885  ...  0.224488  0.025730  0.663071\n",
+            "30  0.268869  0.311578  0.193757  ...  0.214893  0.000000  0.677931\n",
+            "31  0.317657  0.312197  0.360288  ...  0.460501  0.341041  0.393881\n",
+            "32  0.256637  0.229325  0.485302  ...  1.000000  0.357580  0.440558\n",
+            "33  0.258666  0.329388  0.386175  ...  0.369330  1.000000  0.259152\n",
+            "34  0.014014  0.000000  0.000000  ...  0.334768  0.102644  1.000000\n",
+            "\n",
+            "[35 rows x 35 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G0sjkiv1TqWI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Con la matriz normalizada, se utiliza un criterio de extraccion de los features que poseen una correlación menor al 90%, dejando fuera aquellos con una correlación mayor o igual a este porcentaje. Este proceso de extracción se realizó mediante una hoja de cálculo."
       ]
     },
     {
