--- a/Dermatology.ipynb
+++ b/Dermatology.ipynb
@@ -43,9 +43,9 @@
       },
       "source": [
         "## Miembros\n",
-        "Edy Adolfo Cocon Marroquin - \n",
+        "Edy Adolfo Cocon Marroquin - 13001762\n",
         "\n",
-        "Javier Antonio Ferrer Morales -\n",
+        "Javier Antonio Ferrer Morales - 13000522\n",
         "\n",
         "Kevin José Hernández Marroquín - 17001095"
       ]
@@ -3816,6 +3816,7 @@
         "\n",
         "\n",
         "*   La arquitectura 1 y la arquitectura 2 tienen desempeños muy similares, sin embargo, la arquitectura 1 tiene la precisión más alta en la mayoría de la pruebas, entonces concluímos que la arquitectura 1 es mejor para este problema.\n",
+        "*   El número de Epochs es muy bajo para el proceso de entrenamiento debido a que el dataset de Training es muy pequeño. De esta forma, evitamos también que los modelos caigan en Overfiting\n",
         "\n"
       ]
     }
